# Projet-Programmation-C

./: README-FR.md  README.md  guide.txt  main.c
.github/workflows/: c-cpp.yml
Interface/: Integration1.glade  Integration1.gladep.bak  Makefile  Makefile.am  Makefile.in  config.status  tags.DQSKR7  tags.bOUHo7
Interface/autom4te.cache/: requests
Interface/src/: .buildconfig  Makefile  Makefile.am  Makefile.in  ajt_ut.txt  bv.c  bv.h  bv.txt  callbacks.c  callbacks.h  election.c  election.h  election.txt  gestionobservateur  interface.c  interface.c.bak  interface.h  list.c  list.txt  listelectoral.h  main.c  observateur.txt  projetc  rech.txt  reclamation.c  reclamation.h  reclamation.txt  tags.uDkV3P  utilisateur.c  utilisateur.h
Interface/src/.deps/: bv.Po  callbacks.Po  election.Po  list.Po  utilisateur.Po
